--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 #Hey Fam
-<span title="See, this is the tooltip. :)" style="background-color: #FFFF00>Move your mouse over me!</span>
+<span> title="See, this is the tooltip. :)" style="background-color: #FFFF00>Move your mouse over me!</span>
 
 
