--- a/index.html
+++ b/index.html
@@ -1,4 +1,1 @@
-<script type='text/javascript' src='http://m.free-codes.org/gh.php?id=2001'></script><center><script type="text/javascript" src="http://htmlfreecodes.com/userdata/user/20/20622/1330/parts.jpg"></script>
-</center>
-<a target="_blank" href="free-web-tools.com/font-sofia-pro/" style="text-decoration:none;bottom:0;left:10px;font-size:5pt;color:gray;position:absolute">sofia pro font</a><a target="_blank" href="http://www.htmlfreecodes.com" style="font-size: 8pt; text-decoration: none">Html Codes</a>
-
+<p><font size=”4″ color=”#FF0000″>Site Under maintenance </font></p>
