--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<p><font size=”4″ color=”#FF0000″>Site Under maintenance </font></p>
+<p><font size=”10″ color=”#000000″>Site Under maintenance </font></p>
