--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<p><font size=”10″ color=”#000000″>Site Under maintenance </font></p>
+ <html>
+<head>
+<style>
+h1 {text-align: center;}
+p {text-align: center;}
+div {text-align: center;}
+</style>
+</head>
+<body>
+
+<h1>Under Maintenance</h1>
+
+
+</body>
+</html> 
