--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
-<div>
-<script src="https://cdn.htmlgames.com/embed.js?game=CruiseShipHiddenObjects&amp;bgcolor=white"></script>
+
+
+
+<!-- Play.iDevGames.co.uk Responsive Embed Code for Bitcoin Wallet Simulator -->
+<div style="position: relative;height: 0;overflow: hidden;padding-bottom: 56.25%;">
+    <iframe id="embededGame" src="https://play.idevgames.co.uk/embed/bitcoin-wallet-simulator" scrolling="no" seamless="seamless" frameBorder="0" style="position: absolute;top:0;left: 0;width: 100%;height: 100%;">Browser not compatible.</iframe>
 </div>
-<p>Under Maintenance</p>
+<!-- End Embed Code -->
+
