--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
-
-
-
-<!-- Play.iDevGames.co.uk Responsive Embed Code for Bitcoin Wallet Simulator -->
+<!-- Play.iDevGames.co.uk Responsive Embed Code for Galactic Wars -->
 <div style="position: relative;height: 0;overflow: hidden;padding-bottom: 56.25%;">
-    <iframe id="embededGame" src="https://play.idevgames.co.uk/embed/bitcoin-wallet-simulator" scrolling="no" seamless="seamless" frameBorder="0" style="position: absolute;top:0;left: 0;width: 100%;height: 100%;">Browser not compatible.</iframe>
+    <iframe id="embededGame" src="https://play.idevgames.co.uk/embed/galactic-wars" scrolling="no" seamless="seamless" frameBorder="0" style="position: absolute;top:0;left: 0;width: 100%;height: 100%;">Browser not compatible.</iframe>
 </div>
 <!-- End Embed Code -->
+
 
