--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <article>
     <h1>We&rsquo;ll be back soon!</h1>
     <div>
-        #Sorry for the inconvenience but we&rsquo;re performing some maintenance at the moment. If you need to you can always <a href="mailto:#">contact us</a>, otherwise we&rsquo;ll be back online shortly!</p>
+Sorry for the inconvenience but we&rsquo;re performing some maintenance at the moment. If you need to you can always <a href="https://wa.me/+94779218324">contact us</a></p>
         #Blah Blah</p>
     </div>
 </article>
