--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <title>Site Maintenance</title>
 <style>
-  body { background-color:black; text-align: center; padding: 150px; }
+  body { background-color:LightGray; text-align: center; padding: 150px; }
   h1 { font-size: 50px; }
   body { font: 20px Helvetica, sans-serif; color: #333; }
   article { display: block; text-align: left; width: 650px; margin: 0 auto; }
@@ -14,4 +14,6 @@
 Sorry for the inconvenience but we&rsquo;re performing some maintenance at the moment. If you need me, you can always <a href="https://wa.me/+94779218324">contact me</a></p>
         #Blah Blah</p>
     </div>
+<p><iframe width="560" height="315" src="https://www.youtube.com/embed/w6V0T_BoW4w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</p>
 </article>
