--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 Sorry for the inconvenience but we&rsquo;re performing some maintenance at the moment. If you need me, you can always <a href="https://wa.me/+94779218324">contact me</a></p>
         #Blah Blah</p>
     </div>
-<p><iframe autoplay width="500" height="50" src="https://www.youtube.com/embed/w6V0T_BoW4w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<p><iframe width="550" height="60" src="https://www.youtube.com/embed/w6V0T_BoW4w/?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </p>
 </article>
