--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 Sorry for the inconvenience but we&rsquo;re performing some maintenance at the moment. If you need me, you can always <a href="https://wa.me/+94779218324">contact me</a></p>
         #Blah Blah</p>
     </div>
-<p><iframe width="620" height="80" src="https://www.youtube.com/embed/w6V0T_BoW4w/?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<p>
+<iframe width="925" height="315" src="https://www.youtube.com/embed/rcVb6l4TpHw?rel=0&amp;autoplay=1&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
 </p>
 </article>
