--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@ Sorry for the inconvenience but we&rsquo;re performing some maintenance at the m
         #Blah Blah</p>
     </div>
 <p>
-<iframe width="925" height="315" src="https://www.youtube.com/embed/rcVb6l4TpHw?rel=0&amp;autoplay=1&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+  <iframe id="existing-iframe-example"width="640" height="360"
+  src="https://www.youtube.com/embed/UYIAfiVGluk autoplay=1&mute=1&enablejsapi=1" frameborder="0"
+style="border: solid 4px #37474F"></iframe>
 </p>
 </article>
