--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ Sorry for the inconvenience but we&rsquo;re performing some maintenance at the m
         #Blah Blah</p>
     </div>
 <p>
-  <iframe id="existing-iframe-example"width="640" height="360"
+  <iframe id="existing-iframe-example"width="640" height="360 controls"
   src="https://www.youtube.com/embed/UYIAfiVGluk autoplay=1&mute=1&enablejsapi=1" frameborder="0"
 style="border: solid 4px #37474F"></iframe>
 </p>
