--- a/index.html
+++ b/index.html
@@ -14,4 +14,7 @@
 Sorry for the inconvenience but we&rsquo;re performing some maintenance at the moment. If you need me, you can always <a href="https://wa.me/+94779218324">contact me</a></p>
         #Blah Blah</p>
     </div>
+<p>
+  <a href="https://iamkavishka.github.io/game">Play this while I edit this <sub>shithole</sub></a>
+</p>
 </article>
