--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@ Sorry for the inconvenience but we&rsquo;re performing some maintenance at the m
         #Blah Blah</p>
     </div>
 <p>
-  <a href="https://iamkavishka.github.io/game">Play this while I edit this <sub>shithole</sub></a>
+  <a href="https://iamkavishka.github.io/game"><sub>Play me<33</sub></a>
 </p>
 </article>
